--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ name = "python-template"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.11"
+python = ">=3.12,<4.0"
 fastapi = "^0.104.0"
 uvicorn = "0.23.2"
 sqlalchemy = "^2.0.31"
